# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md  main.c
2015/Day1/: main.c
2015/Day2/: main.c
2015/Day3/: main.c
2015/Day4/: main.c
2016/Day1/: main.c
2016/Day2/: main.c
2016/Day3/: main.c
2016/Day8/: main.c
2017/Day1/: part1.py  part2.py
